<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_employee"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <!-- copied layout from add_employee_dialog but with miniscule changes to naming -->
    <EditText
        android:id="@+id/firstNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/lastNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/departmentInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/department"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/salaryInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/salary"
        android:inputType="numberDecimal"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/joiningDateInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/joining_date_yyyy_mm_dd"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/updateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:backgroundTint="@color/admin_deep"/>
</LinearLayout>