<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_employee_dialog_enter_employee_id"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/employeeIdInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_employee_dialog_employee_id"
        android:inputType="number"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/findButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_employee_dialog_find_employee"
        android:backgroundTint="@color/admin_deep"/>
</LinearLayout>